--- a/technicalTestBack/src/main/resources/application.properties
+++ b/technicalTestBack/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=technicalTest
+spring.h2.console.enabled=true
+spring.h2.console.path=/console/
+spring.datasource.url=jdbc:h2:mem:test
